Tests/CompilerTests/negative/illegal-sink-global.hylo
//! stage:lowering

let global = ()

public fun main() {
  var x = global
}
