Tests/CompilerTests/negative/illegal-sink-global.expected
negative/illegal-sink-global.hylo:6.11-17: error: illegal 'sink' access
  var x = global
          ~~~~~~
